컬러팔레트 한번 더 수정

--- a/bezier/src/main/res/values-night/colors.xml
+++ b/bezier/src/main/res/values-night/colors.xml
@@ -1,17 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <color name="text_neutral">@color/white_80</color>
     <color name="text_neutral_heaviest">@color/white_100</color>
     <color name="text_neutral_light">@color/white_60</color>
     <color name="text_neutral_lighter">@color/white_40</color>
-    <color name="fill_neutral_heaviest">@color/white_90</color>
-    <color name="fill_neutral_heavier">@color/white_40</color>
-    <color name="fill_neutral_heavy">@color/white_20</color>
-    <color name="state_default">@color/white_20</color>
-    <color name="fill_neutral_light">@color/white_8</color>
-    <color name="fill_neutral_lighter">@color/white_5</color>
-    <color name="fill_neutral_lightest">@color/white_3</color>
-    <color name="fill_neutral_transparent">@color/white_0</color>
     <color name="icon_neutral">@color/white_40</color>
     <color name="icon_action">@color/blue_300</color>
     <color name="icon_success">@color/green_300</color>
@@ -33,91 +25,111 @@
     <color name="icon_accent_pink">@color/pink_300</color>
     <color name="icon_absolute_white">@color/white_100</color>
     <color name="icon_absolute_black">@color/black_100</color>
-    <color name="border_neutral">@color/white_12</color>
-    <color name="border_neutral_heavy">@color/white_40</color>
-    <color name="border_detach_highest">@color/grey_700</color>
-    <color name="border_absolute_white">@color/white_100</color>
-    <color name="border_detach_higher">@color/grey_800</color>
-    <color name="fill_action_light">@color/blue_300_30</color>
     <color name="fill_action">@color/blue_300</color>
+    <color name="fill_success">@color/green_300</color>
+    <color name="fill_highlight">@color/cobalt_300</color>
+    <color name="fill_warning">@color/orange_300</color>
+    <color name="fill_critical">@color/red_300</color>
+    <color name="fill_neutral_heaviest">@color/white_90</color>
+    <color name="fill_neutral_heavier">@color/white_40</color>
+    <color name="fill_neutral_heavy">@color/white_20</color>
+    <color name="fill_neutral_light">@color/white_8</color>
+    <color name="fill_neutral_lighter">@color/white_5</color>
+    <color name="fill_neutral_lightest">@color/white_3</color>
+    <color name="fill_neutral_transparent">@color/white_0</color>
+    <color name="fill_action_light">@color/blue_300_30</color>
     <color name="fill_action_lighter">@color/blue_300_18</color>
     <color name="fill_action_transparent">@color/blue_300_0</color>
-    <color name="fill_success">@color/green_300</color>
     <color name="fill_success_light">@color/green_300_30</color>
     <color name="fill_success_lighter">@color/green_300_18</color>
-    <color name="fill_highlight">@color/cobalt_300</color>
     <color name="fill_success_transparent">@color/green_300_0</color>
     <color name="fill_highlight_light">@color/cobalt_300_30</color>
     <color name="fill_highlight_lighter">@color/cobalt_300_18</color>
     <color name="fill_highlight_transparent">@color/cobalt_300_0</color>
-    <color name="fill_warning">@color/orange_300</color>
     <color name="fill_warning_light">@color/orange_300_30</color>
     <color name="fill_warning_lighter">@color/orange_300_18</color>
     <color name="fill_warning_transparent">@color/orange_300_0</color>
-    <color name="fill_critical">@color/red_300</color>
     <color name="fill_critical_light">@color/red_300_30</color>
     <color name="fill_critical_lighter">@color/red_300_18</color>
+    <color name="fill_critical_transparent">@color/red_300_0</color>
+    <color name="fill_grey_heavier">@color/grey_750</color>
+    <color name="fill_grey_heavy">@color/grey_800</color>
+    <color name="fill_grey">@color/grey_850</color>
+    <color name="fill_accent_blue">@color/blue_300_18</color>
+    <color name="fill_accent_cobalt">@color/cobalt_300_18</color>
+    <color name="fill_accent_green">@color/green_300_18</color>
+    <color name="fill_accent_red">@color/red_300_18</color>
+    <color name="fill_accent_orange">@color/orange_300_18</color>
+    <color name="fill_accent_yellow">@color/yellow_300_18</color>
+    <color name="fill_accent_olive">@color/olive_300_18</color>
+    <color name="fill_accent_teal">@color/teal_300_18</color>
+    <color name="fill_accent_navy">@color/navy_300_18</color>
+    <color name="fill_accent_purple">@color/purple_300_18</color>
+    <color name="fill_accent_pink">@color/pink_300_18</color>
     <color name="fill_accent_blue_heavy">@color/blue_300_30</color>
     <color name="fill_accent_blue_heavier">@color/blue_300</color>
     <color name="fill_accent_blue_transparent">@color/blue_300_0</color>
     <color name="fill_accent_cobalt_heavy">@color/cobalt_300_30</color>
-    <color name="fill_critical_transparent">@color/red_300_0</color>
-    <color name="fill_accent_green_heavy">@color/green_300_30</color>
-    <color name="fill_accent_red_heavy">@color/red_300_30</color>
-    <color name="fill_accent_blue">@color/blue_300_18</color>
-    <color name="fill_accent_orange_heavy">@color/orange_300_30</color>
-    <color name="fill_accent_cobalt">@color/cobalt_300_18</color>
-    <color name="fill_accent_green">@color/green_300_18</color>
-    <color name="fill_accent_yellow_heavy">@color/yellow_300_30</color>
     <color name="fill_accent_cobalt_heavier">@color/cobalt_300</color>
-    <color name="fill_accent_red">@color/red_300_18</color>
-    <color name="fill_accent_olive_heavy">@color/olive_300_30</color>
-    <color name="fill_accent_orange">@color/orange_300_18</color>
-    <color name="fill_accent_yellow">@color/yellow_300_18</color>
-    <color name="fill_accent_olive">@color/olive_300_18</color>
-    <color name="fill_accent_teal_heavy">@color/teal_300_30</color>
+    <color name="fill_accent_cobalt_transparent">@color/cobalt_300_0</color>
+    <color name="fill_accent_green_heavy">@color/green_300_30</color>
     <color name="fill_accent_green_heavier">@color/green_300</color>
-    <color name="fill_accent_teal">@color/teal_300_18</color>
-    <color name="fill_accent_navy_heavy">@color/navy_300_30</color>
-    <color name="fill_accent_navy">@color/navy_300_18</color>
-    <color name="fill_accent_purple">@color/purple_300_18</color>
+    <color name="fill_accent_green_transparent">@color/green_300_0</color>
+    <color name="fill_accent_red_heavy">@color/red_300_30</color>
     <color name="fill_accent_red_heavier">@color/red_300</color>
     <color name="fill_accent_red_transparent">@color/red_300_0</color>
-    <color name="fill_accent_purple_heavy">@color/purple_300_30</color>
+    <color name="fill_accent_orange_heavy">@color/orange_300_30</color>
     <color name="fill_accent_orange_heavier">@color/orange_300</color>
-    <color name="fill_accent_pink">@color/pink_300_18</color>
-    <color name="surface_highest">@color/grey_700</color>
+    <color name="fill_accent_orange_transparent">@color/orange_300_0</color>
+    <color name="fill_accent_yellow_heavy">@color/yellow_300_30</color>
     <color name="fill_accent_yellow_heavier">@color/yellow_300</color>
+    <color name="fill_accent_yellow_transparent">@color/yellow_300_0</color>
+    <color name="fill_accent_olive_heavy">@color/olive_300_30</color>
     <color name="fill_accent_olive_heavier">@color/olive_300</color>
     <color name="fill_accent_olive_transparent">@color/olive_300_0</color>
+    <color name="fill_accent_teal_heavy">@color/teal_300_30</color>
     <color name="fill_accent_teal_heavier">@color/teal_300</color>
     <color name="fill_accent_teal_transparent">@color/teal_300_0</color>
+    <color name="fill_accent_navy_heavy">@color/navy_300_30</color>
     <color name="fill_accent_navy_heavier">@color/navy_300</color>
     <color name="fill_accent_navy_transparent">@color/navy_300_0</color>
+    <color name="fill_accent_purple_heavy">@color/purple_300_30</color>
     <color name="fill_accent_purple_heavier">@color/purple_300</color>
     <color name="fill_accent_purple_transparent">@color/purple_300_0</color>
     <color name="fill_accent_pink_heavy">@color/pink_300_30</color>
-    <color name="surface_higher">@color/grey_800</color>
-    <color name="surface_high">@color/grey_850</color>
     <color name="fill_accent_pink_heavier">@color/pink_300</color>
     <color name="fill_accent_pink_transparent">@color/pink_300_0</color>
+    <color name="fill_absolute_white">@color/white_100</color>
+    <color name="fill_absolute_black">@color/black_100</color>
+    <color name="fill_absolute_white_light">@color/white_20</color>
+    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="border_neutral">@color/white_12</color>
+    <color name="border_neutral_heavy">@color/white_20</color>
+    <color name="border_neutral_heavier">@color/white_40</color>
+    <color name="border_detach_highest">@color/grey_700</color>
+    <color name="border_absolute_white">@color/white_100</color>
+    <color name="border_detach_higher">@color/grey_800</color>
+    <color name="surface_highest">@color/grey_750</color>
+    <color name="surface_higher">@color/grey_800</color>
+    <color name="surface_high">@color/grey_850</color>
     <color name="surface_low">@color/grey_950</color>
     <color name="dim_absolute_black_heavy">@color/black_60</color>
-    <color name="dim_absolute_white_heavy">@color/white_60</color>
+    <color name="dim_absolute_white_heavy">@color/white_80</color>
     <color name="text_action">@color/blue_300</color>
     <color name="text_success">@color/green_300</color>
-    <color name="surface_lower">@color/black_100</color>
     <color name="text_highlight">@color/cobalt_300</color>
     <color name="text_warning">@color/orange_300</color>
     <color name="text_critical">@color/red_300</color>
     <color name="text_accent_blue">@color/blue_300</color>
     <color name="text_accent_cobalt">@color/cobalt_300</color>
+    <color name="surface_glass_highest">@color/grey_700_90</color>
     <color name="text_accent_green">@color/green_300</color>
-    <color name="surface_glass_highest">@color/grey_alpha_700_90</color>
     <color name="text_accent_red">@color/red_300</color>
-    <color name="surface_glass_higher">@color/grey_alpha_800_90</color>
-    <color name="surface_glass_high">@color/grey_alpha_850_90</color>
-    <color name="surface_glass">@color/grey_alpha_800_90</color>
+    <color name="surface_glass_higher">@color/grey_800_90</color>
+    <color name="surface_glass_high">@color/grey_850_90</color>
+    <color name="surface_glass">@color/grey_800_90</color>
     <color name="text_accent_orange">@color/orange_300</color>
     <color name="text_accent_yellow">@color/yellow_300</color>
     <color name="text_accent_olive">@color/olive_300</color>
@@ -138,28 +150,23 @@
     <color name="surface_accent_pink">@color/pink_300</color>
     <color name="text_absolute_white">@color/white_100</color>
     <color name="text_absolute_black">@color/black_100</color>
-    <color name="fill_absolute_white">@color/white_100</color>
-    <color name="fill_absolute_white_light">@color/white_20</color>
-    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="gradient_accent_green">@color/green_400</color>
     <color name="surface">@color/grey_900</color>
-    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="gradient_accent_green_light">@color/green_300</color>
     <color name="dim_absolute_black">@color/black_40</color>
-    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="border_detach">@color/grey_900</color>
+    <color name="state_default">@color/white_20</color>
+    <color name="state_action">@color/blue_300</color>
+    <color name="state_warning">@color/orange_300</color>
+    <color name="state_action_light">@color/blue_300_30</color>
+    <color name="state_warning_light">@color/orange_300</color>
     <color name="elevation_xlarge">@color/black_30</color>
     <color name="elevation_large">@color/black_22</color>
     <color name="elevation_medium">@color/black_15</color>
     <color name="elevation_small">@color/black_8</color>
     <color name="elevation_base">@color/black_5</color>
     <color name="elevation_base_inner">@color/white_12</color>
-    <color name="state_action">@color/blue_300</color>
-    <color name="state_warning">@color/orange_300</color>
-    <color name="state_action_light">@color/blue_300_30</color>
-    <color name="state_warning_light">@color/orange_300_30</color>
-    <color name="fill_absolute_black">@color/black_100</color>
     <color name="dim_absolute_white">@color/white_40</color>
     <color name="border_detach_high">@color/grey_850</color>
-    <color name="fill_accent_yellow_transparent">@color/yellow_300_0</color>
-    <color name="fill_accent_orange_transparent">@color/orange_300_0</color>
-    <color name="fill_accent_green_transparent">@color/green_300_0</color>
-    <color name="fill_accent_cobalt_transparent">@color/cobalt_300_0</color>
+    <color name="border_detach_low">@color/grey_950</color>
 </resources>
