--- a/bezier/src/main/res/values/colors.xml
+++ b/bezier/src/main/res/values/colors.xml
@@ -1,17 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <color name="text_neutral">@color/black_85</color>
     <color name="text_neutral_heaviest">@color/black_100</color>
     <color name="text_neutral_light">@color/black_60</color>
     <color name="text_neutral_lighter">@color/black_40</color>
-    <color name="fill_neutral_heaviest">@color/black_85</color>
-    <color name="fill_neutral_heavier">@color/black_40</color>
-    <color name="fill_neutral_heavy">@color/black_15</color>
-    <color name="state_default">@color/black_15</color>
-    <color name="fill_neutral_light">@color/black_5</color>
-    <color name="fill_neutral_lighter">@color/black_3</color>
-    <color name="fill_neutral_lightest">@color/black_1</color>
-    <color name="fill_neutral_transparent">@color/black_0</color>
     <color name="icon_neutral">@color/black_40</color>
     <color name="icon_action">@color/blue_400</color>
     <color name="icon_success">@color/green_400</color>
@@ -33,89 +25,109 @@
     <color name="icon_accent_pink">@color/pink_400</color>
     <color name="icon_absolute_white">@color/white_100</color>
     <color name="icon_absolute_black">@color/black_100</color>
-    <color name="border_neutral">@color/black_8</color>
-    <color name="border_neutral_heavy">@color/black_40</color>
-    <color name="border_detach_highest">@color/white_100</color>
-    <color name="border_absolute_white">@color/white_100</color>
-    <color name="border_detach_higher">@color/white_100</color>
-    <color name="fill_action_light">@color/blue_400_20</color>
     <color name="fill_action">@color/blue_400</color>
+    <color name="fill_success">@color/green_400</color>
+    <color name="fill_highlight">@color/cobalt_400</color>
+    <color name="fill_warning">@color/orange_400</color>
+    <color name="fill_critical">@color/red_400</color>
+    <color name="fill_neutral_heaviest">@color/black_85</color>
+    <color name="fill_neutral_heavier">@color/black_40</color>
+    <color name="fill_neutral_heavy">@color/black_15</color>
+    <color name="fill_neutral_light">@color/black_5</color>
+    <color name="fill_neutral_lighter">@color/black_3</color>
+    <color name="fill_neutral_lightest">@color/black_1</color>
+    <color name="fill_neutral_transparent">@color/black_0</color>
+    <color name="fill_action_light">@color/blue_400_20</color>
     <color name="fill_action_lighter">@color/blue_400_10</color>
     <color name="fill_action_transparent">@color/blue_400_0</color>
-    <color name="fill_success">@color/green_400</color>
     <color name="fill_success_light">@color/green_400_20</color>
     <color name="fill_success_lighter">@color/green_400_10</color>
-    <color name="fill_highlight">@color/cobalt_400</color>
     <color name="fill_success_transparent">@color/green_400_0</color>
     <color name="fill_highlight_light">@color/cobalt_400_20</color>
     <color name="fill_highlight_lighter">@color/cobalt_400_10</color>
     <color name="fill_highlight_transparent">@color/cobalt_400_0</color>
-    <color name="fill_warning">@color/orange_400</color>
     <color name="fill_warning_light">@color/orange_400_20</color>
     <color name="fill_warning_lighter">@color/orange_400_10</color>
     <color name="fill_warning_transparent">@color/orange_400_0</color>
-    <color name="fill_critical">@color/red_400</color>
     <color name="fill_critical_light">@color/red_400_20</color>
     <color name="fill_critical_lighter">@color/red_400_10</color>
+    <color name="fill_critical_transparent">@color/red_400_0</color>
+    <color name="fill_grey_heavier">@color/grey_200</color>
+    <color name="fill_grey_heavy">@color/grey_100</color>
+    <color name="fill_grey">@color/grey_50</color>
+    <color name="fill_accent_blue">@color/blue_400_10</color>
+    <color name="fill_accent_cobalt">@color/cobalt_400_10</color>
+    <color name="fill_accent_green">@color/green_400_10</color>
+    <color name="fill_accent_red">@color/red_400_10</color>
+    <color name="fill_accent_orange">@color/orange_400_10</color>
+    <color name="fill_accent_yellow">@color/yellow_400_10</color>
+    <color name="fill_accent_olive">@color/olive_400_10</color>
+    <color name="fill_accent_teal">@color/teal_400_10</color>
+    <color name="fill_accent_navy">@color/navy_400_10</color>
+    <color name="fill_accent_purple">@color/purple_400_10</color>
+    <color name="fill_accent_pink">@color/pink_400_10</color>
     <color name="fill_accent_blue_heavy">@color/blue_400_20</color>
     <color name="fill_accent_blue_heavier">@color/blue_400</color>
     <color name="fill_accent_blue_transparent">@color/blue_400_0</color>
     <color name="fill_accent_cobalt_heavy">@color/cobalt_400_20</color>
-    <color name="fill_critical_transparent">@color/red_400_0</color>
-    <color name="fill_accent_green_heavy">@color/green_400_20</color>
-    <color name="fill_accent_red_heavy">@color/red_400_20</color>
-    <color name="fill_accent_blue">@color/blue_400_10</color>
-    <color name="fill_accent_orange_heavy">@color/orange_400_20</color>
-    <color name="fill_accent_cobalt">@color/cobalt_400_10</color>
-    <color name="fill_accent_green">@color/green_400_10</color>
-    <color name="fill_accent_yellow_heavy">@color/yellow_400_20</color>
     <color name="fill_accent_cobalt_heavier">@color/cobalt_400</color>
-    <color name="fill_accent_red">@color/red_400_10</color>
-    <color name="fill_accent_olive_heavy">@color/olive_400_20</color>
-    <color name="fill_accent_orange">@color/orange_400_10</color>
-    <color name="fill_accent_yellow">@color/yellow_400_10</color>
-    <color name="fill_accent_olive">@color/olive_400_10</color>
-    <color name="fill_accent_teal_heavy">@color/teal_400_20</color>
+    <color name="fill_accent_cobalt_transparent">@color/cobalt_400_0</color>
+    <color name="fill_accent_green_heavy">@color/green_400_20</color>
     <color name="fill_accent_green_heavier">@color/green_400</color>
-    <color name="fill_accent_teal">@color/teal_400_10</color>
-    <color name="fill_accent_navy_heavy">@color/navy_400_20</color>
-    <color name="fill_accent_navy">@color/navy_400_10</color>
-    <color name="fill_accent_purple">@color/purple_400_10</color>
+    <color name="fill_accent_green_transparent">@color/green_400_0</color>
+    <color name="fill_accent_red_heavy">@color/red_400_20</color>
     <color name="fill_accent_red_heavier">@color/red_400</color>
     <color name="fill_accent_red_transparent">@color/red_400_0</color>
-    <color name="fill_accent_purple_heavy">@color/purple_400_20</color>
+    <color name="fill_accent_orange_heavy">@color/orange_400_20</color>
     <color name="fill_accent_orange_heavier">@color/orange_400</color>
-    <color name="fill_accent_pink">@color/pink_400_10</color>
-    <color name="surface_highest">@color/white_100</color>
+    <color name="fill_accent_orange_transparent">@color/orange_400_0</color>
+    <color name="fill_accent_yellow_heavy">@color/yellow_400_20</color>
     <color name="fill_accent_yellow_heavier">@color/yellow_400</color>
+    <color name="fill_accent_yellow_transparent">@color/yellow_400_0</color>
+    <color name="fill_accent_olive_heavy">@color/olive_400_20</color>
     <color name="fill_accent_olive_heavier">@color/olive_400</color>
     <color name="fill_accent_olive_transparent">@color/olive_400_0</color>
+    <color name="fill_accent_teal_heavy">@color/teal_400_20</color>
     <color name="fill_accent_teal_heavier">@color/teal_400</color>
     <color name="fill_accent_teal_transparent">@color/teal_400_0</color>
+    <color name="fill_accent_navy_heavy">@color/navy_400_20</color>
     <color name="fill_accent_navy_heavier">@color/navy_400</color>
     <color name="fill_accent_navy_transparent">@color/navy_400_0</color>
+    <color name="fill_accent_purple_heavy">@color/purple_400_20</color>
     <color name="fill_accent_purple_heavier">@color/purple_400</color>
     <color name="fill_accent_purple_transparent">@color/purple_400_0</color>
     <color name="fill_accent_pink_heavy">@color/pink_400_20</color>
-    <color name="surface_higher">@color/white_100</color>
-    <color name="surface_high">@color/white_100</color>
     <color name="fill_accent_pink_heavier">@color/pink_400</color>
     <color name="fill_accent_pink_transparent">@color/pink_400_0</color>
+    <color name="fill_absolute_white">@color/white_100</color>
+    <color name="fill_absolute_black">@color/black_100</color>
+    <color name="fill_absolute_white_light">@color/white_20</color>
+    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="border_neutral">@color/black_8</color>
+    <color name="border_neutral_heavy">@color/black_15</color>
+    <color name="border_neutral_heavier">@color/black_40</color>
+    <color name="border_detach_highest">@color/white_100</color>
+    <color name="border_absolute_white">@color/white_100</color>
+    <color name="border_detach_higher">@color/white_100</color>
+    <color name="surface_highest">@color/white_100</color>
+    <color name="surface_higher">@color/white_100</color>
+    <color name="surface_high">@color/white_100</color>
     <color name="surface_low">@color/grey_50</color>
     <color name="dim_absolute_black_heavy">@color/black_60</color>
     <color name="dim_absolute_white_heavy">@color/white_60</color>
     <color name="text_action">@color/blue_400</color>
     <color name="text_success">@color/green_400</color>
-    <color name="surface_lower">@color/grey_100</color>
     <color name="text_highlight">@color/cobalt_400</color>
     <color name="text_warning">@color/orange_400</color>
     <color name="text_critical">@color/red_400</color>
     <color name="text_accent_blue">@color/blue_400</color>
     <color name="text_accent_cobalt">@color/cobalt_400</color>
+    <color name="surface_glass_highest">@color/grey_200_90</color>
     <color name="text_accent_green">@color/green_400</color>
-    <color name="surface_glass_highest">@color/grey_alpha_200_90</color>
     <color name="text_accent_red">@color/red_400</color>
-    <color name="surface_glass_higher">@color/grey_alpha_100_90</color>
+    <color name="surface_glass_higher">@color/grey_100_90</color>
     <color name="surface_glass_high">@color/white_90</color>
     <color name="surface_glass">@color/white_90</color>
     <color name="text_accent_orange">@color/orange_400</color>
@@ -138,28 +150,23 @@
     <color name="surface_accent_pink">@color/pink_400</color>
     <color name="text_absolute_white">@color/white_100</color>
     <color name="text_absolute_black">@color/black_100</color>
-    <color name="fill_absolute_white">@color/white_100</color>
-    <color name="fill_absolute_white_light">@color/white_20</color>
-    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="gradient_accent_green">@color/green_400</color>
     <color name="surface">@color/white_100</color>
-    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="gradient_accent_green_light">@color/green_300</color>
     <color name="dim_absolute_black">@color/black_40</color>
-    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="border_detach">@color/white_100</color>
+    <color name="state_default">@color/black_15</color>
+    <color name="state_action">@color/blue_400</color>
+    <color name="state_warning">@color/orange_400</color>
+    <color name="state_action_light">@color/blue_400_30</color>
+    <color name="state_warning_light">@color/orange_400_30</color>
     <color name="elevation_xlarge">@color/black_30</color>
     <color name="elevation_large">@color/black_22</color>
     <color name="elevation_medium">@color/black_15</color>
     <color name="elevation_small">@color/black_8</color>
     <color name="elevation_base">@color/black_5</color>
     <color name="elevation_base_inner">@color/white_12</color>
-    <color name="state_action">@color/blue_400</color>
-    <color name="state_warning">@color/orange_400</color>
-    <color name="state_action_light">@color/blue_400_30</color>
-    <color name="state_warning_light">@color/orange_400_30</color>
-    <color name="fill_absolute_black">@color/black_100</color>
     <color name="dim_absolute_white">@color/white_40</color>
     <color name="border_detach_high">@color/white_100</color>
-    <color name="fill_accent_yellow_transparent">@color/yellow_400_0</color>
-    <color name="fill_accent_orange_transparent">@color/orange_400_0</color>
-    <color name="fill_accent_green_transparent">@color/green_400_0</color>
-    <color name="fill_accent_cobalt_transparent">@color/cobalt_400_0</color>
+    <color name="border_detach_low">@color/grey_50</color>
 </resources>
