--- a/bezier/src/main/res/values/colors.xml
+++ b/bezier/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <color name="text_neutral">@color/black_85</color>
+    <color name="text_inverse">@color/white_100</color>
     <color name="text_neutral_heaviest">@color/black_100</color>
     <color name="text_neutral_light">@color/black_60</color>
     <color name="text_neutral_lighter">@color/black_40</color>
@@ -12,6 +13,7 @@
     <color name="icon_critical">@color/red_400</color>
     <color name="icon_neutral_heavy">@color/black_60</color>
     <color name="icon_neutral_heavier">@color/black_85</color>
+    <color name="icon_inverse_heavier">@color/white_100</color>
     <color name="icon_accent_blue">@color/blue_400</color>
     <color name="icon_accent_cobalt">@color/cobalt_400</color>
     <color name="icon_accent_green">@color/green_400</color>
@@ -55,6 +57,7 @@
     <color name="fill_grey_heavier">@color/grey_200</color>
     <color name="fill_grey_heavy">@color/grey_100</color>
     <color name="fill_grey">@color/grey_50</color>
+    <color name="fill_bright">@color/grey_25</color>
     <color name="fill_accent_blue">@color/blue_400_10</color>
     <color name="fill_accent_cobalt">@color/cobalt_400_10</color>
     <color name="fill_accent_green">@color/green_400_10</color>
@@ -124,8 +127,8 @@
     <color name="text_critical">@color/red_400</color>
     <color name="text_accent_blue">@color/blue_400</color>
     <color name="text_accent_cobalt">@color/cobalt_400</color>
-    <color name="surface_glass_highest">@color/grey_200_90</color>
     <color name="text_accent_green">@color/green_400</color>
+    <color name="surface_glass_highest">@color/grey_200_90</color>
     <color name="text_accent_red">@color/red_400</color>
     <color name="surface_glass_higher">@color/grey_100_90</color>
     <color name="surface_glass_high">@color/white_90</color>
@@ -137,24 +140,13 @@
     <color name="text_accent_navy">@color/navy_400</color>
     <color name="text_accent_purple">@color/purple_400</color>
     <color name="text_accent_pink">@color/pink_400</color>
-    <color name="surface_accent_blue">@color/blue_400</color>
-    <color name="surface_accent_cobalt">@color/cobalt_400</color>
-    <color name="surface_accent_green">@color/green_400</color>
-    <color name="surface_accent_red">@color/red_400</color>
-    <color name="surface_accent_orange">@color/orange_400</color>
-    <color name="surface_accent_yellow">@color/yellow_400</color>
-    <color name="surface_accent_olive">@color/olive_400</color>
-    <color name="surface_accent_teal">@color/teal_400</color>
-    <color name="surface_accent_navy">@color/navy_400</color>
-    <color name="surface_accent_purple">@color/purple_400</color>
-    <color name="surface_accent_pink">@color/pink_400</color>
     <color name="text_absolute_white">@color/white_100</color>
     <color name="text_absolute_black">@color/black_100</color>
-    <color name="gradient_accent_green">@color/green_400</color>
     <color name="surface">@color/white_100</color>
+    <color name="gradient_accent_green">@color/green_400</color>
+    <color name="border_detach">@color/white_100</color>
     <color name="gradient_accent_green_light">@color/green_300</color>
     <color name="dim_absolute_black">@color/black_40</color>
-    <color name="border_detach">@color/white_100</color>
     <color name="state_default">@color/black_15</color>
     <color name="state_action">@color/blue_400</color>
     <color name="state_warning">@color/orange_400</color>
